evacuation_core/src/snapshots/evacuation__bim__tests__evacuation_modeling@udsu_b4_L5_v1_190701-density-0.4.snap
---
source: src-tauri/src/bim.rs
expression: modeling_result
---
number_of_people_inside_building: 0
number_of_evacuated_people: 3593.994963082368
time_in_seconds: 585.5999999999901

