evacuation_core/src/snapshots/evacuation__bim__tests__evacuation_modeling@udsu_b4_L5_v1_190701-density-2.0.snap
---
source: src-tauri/src/bim.rs
expression: modeling_result
---
number_of_people_inside_building: 0
number_of_evacuated_people: 17969.974815411682
time_in_seconds: 2836.19999999995

