evacuation_core/src/snapshots/evacuation__bim__tests__evacuation_modeling@udsu_b5_L4_v1_200102-density-0.3.snap
---
source: src-tauri/src/bim.rs
expression: modeling_result
---
number_of_people_inside_building: 0
number_of_evacuated_people: 1569.1930150473474
time_in_seconds: 184.1999999999987

