evacuation_core/src/snapshots/evacuation__bim__tests__evacuation_modeling@udsu_b5_L4_v1_200102-density-0.4.snap
---
source: src-tauri/src/bim.rs
expression: modeling_result
---
number_of_people_inside_building: 0
number_of_evacuated_people: 2092.2573533964696
time_in_seconds: 212.9999999999981

