evacuation_core/src/snapshots/evacuation__bim__tests__evacuation_modeling@udsu_b5_L4_v1_200102-density-0.5.snap
---
source: src-tauri/src/bim.rs
expression: modeling_result
---
number_of_people_inside_building: 0
number_of_evacuated_people: 2615.3216917455657
time_in_seconds: 262.1999999999971

